[package]
name = "lantern-unbounded"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the native Unbounded peer-proxy protocol"

[dependencies]
base64 = "0.22"
bytes = "1"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt", "sync", "time"] }

[dev-dependencies]
futures = "0.3"
rcgen = "0.14"
