[package]
name = "lantern-unbounded"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the native Unbounded peer-proxy protocol"

[dependencies]
base64 = "0.22"
async-trait = "0.1"
bytes = "1"
env_logger = "0.11"
futures-util = "0.3"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls-webpki-roots"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7"
url = "2"
webrtc = { git = "https://github.com/myleshorton/webrtc", rev = "a6a6d703037ca277df030ec7f882965c9da14577" }

[dev-dependencies]
futures = "0.3"
rcgen = "0.14"
axum = "0.8"
